--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>DOCUMENT</title>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 
 		<!-- FONT -->
 
@@ -352,7 +354,7 @@
 		</main>
 
 	<!-- JQUERY -->
-	<script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
+	<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
 
 	<!-- CALENDAR JS -->
 	<script src="js/datepicker.min.js"></script>
