--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
 	</head>
 
 	<body>
-
+		
+		<div class="wrapper">
 		
 
 			<main class="main">
@@ -159,8 +160,6 @@
 							<object data="images/merry-xmas.svg" name="Main__Xmas" type="image/svg+xml" width="100%" height="100%">Для просмотра SVG графики Вам необходимо обновить браузер</object>
 
 						</div>
-
-						
 
 					</div>
 
@@ -308,6 +307,8 @@
 				</div>
 					
 			</main>
+
+		</div>
 
 		
 
