--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
 
 	<head>
 		<meta charset="UTF-8">
-		<title>DOCUMENT</title>
+		<title>Merry Christmas</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="Merry Christmas Landing page">
 		
 		<!-- FONT -->
 		<link href='https://fonts.googleapis.com/css?family=Roboto:500,700,300,400&subset=latin,cyrillic' rel='stylesheet' type='text/css'>
 
 		<!-- CSS -->
-		<link rel="stylesheet" href="css/style.css">
+		<link rel="stylesheet" href="css/style.min.css">
 	</head>
 
 	<body>
@@ -59,43 +60,43 @@
 
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input " placeholder="Placeholder">
+										<input type="text" class="form-control form__input " placeholder="Placeholder">
 
 									</div>
 
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input " placeholder="Placeholder">
+										<input type="text" class="form-control form__input " placeholder="Placeholder">
 
 									</div>
 
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input " placeholder="Placeholder">
+										<input type="text" class="form-control form__input " placeholder="Placeholder">
 
 									</div>
 
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input " placeholder="Placeholder">
+										<input type="text" class="form-control form__input " placeholder="Placeholder">
 
 									</div>
 									
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input " placeholder="Placeholder">
+										<input type="text" class="form-control form__input " placeholder="Placeholder">
 
 									</div>
 
 									<div class="form__item form__item--error">
 
-										<input type="text" class="form__control form__input" placeholder="Placeholder">
+										<input type="text" class="form-control form__input" placeholder="Placeholder">
 
 									</div>
 
 									<div class="form__item">
 
-										<input type="text" class="form__control form__input" placeholder="Placeholder" disabled>
+										<input type="text" class="form-control form__input" placeholder="Placeholder" disabled>
 
 									</div>
 								
@@ -111,13 +112,13 @@
 									        </div>
 									    </div>
 
-										<textarea class="form__control form__textarea form__textarea--top" maxlength="132" rows="6" id="form__textarea--top" placeholder="Type your text"></textarea>
+										<textarea class="form-control form__textarea form__textarea--top" maxlength="132" rows="6" id="form__textarea--top" placeholder="Type your text"></textarea>
 
 									</div>
 
 									<div class="form__item">
 
-										<label for="form__textarea--bottom" class="form__label">Label</label><textarea class="form__control form__textarea form__textarea--bottom" maxlength="132" rows="6" id="form__textarea--bottom" placeholder="Type your text"></textarea>
+										<label for="form__textarea--bottom" class="form__label">Label</label><textarea class="form-control form__textarea form__textarea--bottom" maxlength="132" rows="6" id="form__textarea--bottom" placeholder="Type your text"></textarea>
 
 										<div class="form__progress">
 									        <div class="form__progress-bar form__progress-bar--bottom" style="width: 0%;"></div>
